--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,13 @@
   "builds": [
     {
       "src": "server/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "maxLambdaSize": "50mb" }
     },
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": { "distDir": "client/dist" }
     }
   ],
   "routes": [
@@ -17,13 +18,13 @@
       "dest": "server/index.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "client/dist/$1",
-      "methods": ["GET", "HEAD"],
+      "src": "/(?!api)",
+      "dest": "client/dist/index.html",
       "status": 200
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/dist/$1"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
