--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 PORT=5000
 DB_USER=purple_merit_db_user
 DB_PASSWORD=OZbqFJh1f4XM1Qu02TVz8DYyYeFnAT5B
-DB_HOST=postgresql://purple_merit_db_user:OZbqFJh1f4XM1Qu02TVz8DYyYeFnAT5B@dpg-d5a29klactks73f31e40-a.singapore-postgres.render.com/purple_merit_db
+DB_HOST=dpg-d5a29klactks73f31e40-a.singapore-postgres.render.com
 DB_PORT=5432
 DB_NAME=purple_merit_db
 JWT_SECRET=super_secret_jwt_key_change_this
+NODE_ENV=production
