--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,13 @@
 {
   "version": 2,
-  "builds": [
+  "projects": [
     {
-      "src": "server/index.js",
-      "use": "@vercel/node",
-      "config": { "maxLambdaSize": "50mb" }
+      "name": "purple-merit-client",
+      "rootDirectory": "client"
     },
     {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "client/dist" }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "server/index.js"
-    },
-    {
-      "src": "/(?!api)",
-      "dest": "client/dist/index.html",
-      "status": 200
-    },
-    {
-      "src": "/(.*)",
-      "dest": "client/dist/$1"
+      "name": "purple-merit-server",
+      "rootDirectory": "server"
     }
   ]
 }
